[metadata]
name = decisiontree
version = 0.0.1
author = Waite Perspectives, LLC - Zach Waite
author_email = zach@waiteperspectives.com
description = Solve and visualize business decision trees
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/waiteperspectives/decisiontree
project_urls =
  Bug Tracker = https://github.com/waiteperspectives/decisiontree/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.10
install_requires =

[options.packages.find]
where = src
